--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,47 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  height: 100%;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+select,
+input {
+  min-width: 80px;
+  min-height: 28px;
+  line-height: 28px;
+  border: 1px solid #eee;
+  padding: 0 6px;
+}
+
+input,
+button,
+a,
+select {
+  outline: 0 none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.txtCenter {
+  text-align: center;
+}
+
+.selected {
+  border: 1px solid rgba(0, 87, 2555, 0.5) !important;
+}
+
+.hover {
+  z-index: 999 !important;
+  border: 2px solid #02dcf7 !important;
 }
