--- a/src/App.less
+++ b/src/App.less
@@ -1,1 +1,12 @@
+.main {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 
+  .content {
+    position: relative;
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+  }
+}
