--- a/src/components/Cmp/index.less
+++ b/src/components/Cmp/index.less
@@ -13,4 +13,14 @@
   .selected {
     border: solid 2px #02dcf7;
   }
+
+  @size: 16px;
+  .stretchDot {
+    z-index: 9999;
+    position: absolute;
+    width: @size;
+    height: @size;
+    background-color: rgba(0, 87, 255, 0.5);
+    border-radius: 50%;
+  }
 }
