feat: delete the strechDot bug

--- a/src/components/Cmp/index.less
+++ b/src/components/Cmp/index.less
@@ -15,8 +15,8 @@
   }
 
   @size: 16px;
-  .stretchDot {
-    z-index: 9999;
+  .selected .stretchDot {
+    z-index: 10;
     position: absolute;
     width: @size;
     height: @size;
