feat: add image materials

--- a/src/components/Cmp/index.less
+++ b/src/components/Cmp/index.less
@@ -2,6 +2,11 @@
   position: absolute;
   box-sizing: border-box;
 
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
   .editStyle {
     position: absolute;
     box-sizing: content-box;
